--- a/app/src/main/res/layout/activity_word_count.xml
+++ b/app/src/main/res/layout/activity_word_count.xml
@@ -19,10 +19,10 @@
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintHorizontal_bias="0.552"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.164" />
+        app:layout_constraintVertical_bias="0.063" />
 
     <Button
         android:id="@+id/wordCountButton"
@@ -39,17 +39,31 @@
 
     <TextView
         android:id="@+id/wordCountDisplay"
-        android:layout_width="144dp"
-        android:layout_height="35dp"
+        android:layout_width="289dp"
+        android:layout_height="263dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text=""
-        android:textSize="24sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/wordCountButton"
+        app:layout_constraintVertical_bias="0.847" />
+
+    <Button
+        android:id="@+id/wordOccurrenceButton"
+        android:layout_width="171dp"
+        android:layout_height="54dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="onWordOccurrenceButtonClicked"
+        android:text="@string/word_occurrence"
+        app:layout_constraintEnd_toEndOf="@+id/wordCountButton"
+        app:layout_constraintStart_toStartOf="@+id/wordCountButton"
         app:layout_constraintTop_toBottomOf="@+id/wordCountButton" />
 
 </android.support.constraint.ConstraintLayout>
